Fix install prompt z-index

--- a/styles/InstallPrompt.module.css
+++ b/styles/InstallPrompt.module.css
@@ -10,6 +10,7 @@
   width: 90%;
   bottom: 5vw;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.7);
+  z-index: 2;
 }
 
 .prompt h3 {
